base/frontend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "frontend-sing-ingress"
  namespace: sing
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: eks-node-group-sing
    alb.ingress.kubernetes.io/group.order: '4'
    my-custom-annotation: "frontend-sing-ingress"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "frontend-sing"
                port:
                  number: 80
